# image-stitching

./: CMakeLists.txt  main.cpp
FeatureDetector/: FeatureDetector.cpp  FeatureDetector.h  MySIFT.cpp  MySIFT.h
ImageProcessor/: ImageProcessor.cpp  ImageProcessor.h
MatchingAlgorithm/: MatchingAlgorithm.cpp  MatchingAlgorithm.h  MySURF.cpp  MySURF.h
Stitcher/: Stitcher.cpp  Stitcher.h
